# ACSE-coursework-Jin-Yu

./: .gitmodules  README.md
acse-1-assessment-1-acse-jy220/: README.md  automata.py  requirements.txt
acse-1-assessment-1-acse-jy220/tests/: rule30_128_final.npy  rule30_128_final_periodic.npy  rule30_128_init.npy  (+1 more)
acse-1-assessment-2-acse-jy220/: Dockerfile  README.md  app.py  process.py  requirements.txt
acse-1-assessment-3-acse-jy220/: README.md  acse_la.tex  environment.yml  requirements.txt  setup.py
acse-3-coursework-acse-jy220/: ACSE-3-2020-21-Coursework-final.ipynb
acse-5-group-project-team-inheritor/: CSRMatrix.cpp  CSRMatrix.h  Interface.cpp  Interface.h  Matrix.cpp  Matrix.h  Matrix_A.txt  PNG.cpp  Parallel.cpp  Pixel.h  README.md  Solver.cpp  Solver.h  Vector_b.txt  bitmap_image.hpp  csr.txt  csrVector.txt  main  main.cpp  stb_image_write.h
acse-5-individual-assignment-acse-jy220/: A1.cpp  A2.cpp  C  C.cpp  CSRMatrix.cpp  CSRMatrix.h  D2.cpp  E.cpp  Matrix.cpp  Matrix.h  d2  readme.md
acse-6-group-project-inheritorplus/: CMakeLists.txt  Image.cpp  Image.h  Interface.cpp  Interface.h  PNG.cpp  PNG.h  Parallel.cpp  Parallel.h  Pixel.cpp  Pixel.h  README.md  Serial.cpp  Serial.h  input.txt  main  main.cpp
acse-6-group-project-inheritorplus/output/: output_0_size(100*100).txt  output_0_size(1000*1000).txt  output_500_size(100*100).txt  output_999_size(100*100).txt
acse-6-group-project-inheritorplus/txt/: GenNum(1000)_size(100*100).txt  GenNum(1000)_size(1000*1000).txt  GenNum(500)_size(1000*1000).txt
acse-6-mpi-coursework-acse-jy220/: README.md  animation.py  clear_output.sh  loaddata.py  main  main.cpp  parameters.ini  pic.py  read_parameters.cpp  read_parameters.h  wave.cpp  wave.h
acse-7-coursework-acse-jy220/: ACSE7-Coursework-PartA.ipynb  ACSE7-Coursework-PartB.ipynb  ACSE7-Coursework-PartC.ipynb  ACSE7-Coursework-PartD.ipynb  README.md
acse-8-coursework-assignment-acse-jy220/: ACSE_8_coursework_2.ipynb  README.md
acse-8-timed-assessment-acse-jy220/: TableForImageNetQuestion.xlsx
(+46 files in other folders)
